# 2dgame

./: CMakeLists.txt
src/: main.c
